assets/styles/objects/_index.scss
@use './../variables/variables' as vars;
@use './../mixins/mixins' as mx;

.o-index {
	display: flex;
	flex-direction: column;
	row-gap: vars.$spacer * 1.5;

	&__header {
		display: flex;
		border-bottom: 1px solid var(--primary);
		align-items: flex-end;
		justify-content: space-between;
		margin-top: 5%;
		flex-wrap: var(--wrap-flex, wrap);
		row-gap: vars.$spacer * 0.5;

		@include mx.breakpoint('xs') {
			--wrap-flex: no-wrap;
		}
	}

	&__headline {
		font-size: clamp(1.8rem, 1.5571rem + 1.2143vw, 3.5rem);
		margin: 0;
	}

	&__image-wrap {
		flex: var(--flex, 0 1 64%);
		margin-left: var(--spacing-outer-left, auto);

		@include mx.breakpoint('xs') {
			--flex: 0 1 85%;
		}
		@include mx.breakpoint('sm') {
			--spacing-outer-left: 0;
			--flex: 0 1 50%;
		}
	}

	&__intro-wrap {
		display: grid;
		column-gap: vars.$spacer * 3;
		row-gap: vars.$spacer * 1.5;
		grid-template-columns: var(--columns-grid-template, 1fr);
		grid-template-areas: var(--areas-grid-template, 'text' 'wotd');

		@include mx.breakpoint('sm') {
			--columns-grid-template: 2fr 1fr;
			--areas-grid-template: 'text wotd';
		}
	}

	&__intro-text {
		font-size: clamp(1.2rem, 1.1429rem + 0.2857vw, 1.6rem);
		line-height: 1.3;
		grid-area: text;

		a {
			--decoration-text: underline dashed from-font;
		}
	}

	.c-word-of-the-day {
		grid-area: wotd;
		margin: var(--spacing-outer);

		@include mx.breakpoint('sm') {
			--spacing-outer: #{vars.$spacer * 1.5};
		}
	}
}

